copy is done ,but save of modify does'n work

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,5 +41,7 @@
     <string name="title_activity_review_select_schedule_program_screen">
         ReviewSelectScheduleProgramScreen
     </string>
+    <string name="action_modify">Edit</string>
+    <string name="action_copy">Copy</string>
 
 </resources>
